[#14749] Remove SiteAddress
Signed-off-by: Pedro Ruivo <pruivo@redhat.com>